--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IoniqRoot</string>
+    <string name="wrong_fw_version">Wrong firmware version. This has only been tested with 191209 release.</string>
 </resources>
