--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="installing">Installing</string>
     <string name="uninstalling_microg">Uninstalling microG</string>
     <string name="process_failed">Process failed.</string>
+    <string name="already_installed">microG is already installed</string>
+    <string name="not_installed">microG is not installed</string>
 </resources>
