--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="not_installed">microG is not installed</string>
     <string name="go_to_engineer_menu">Go to engineer menu</string>
     <string name="cancel">Cancel</string>
+    <string name="edit_system_info_update">Edit \'System info\' update</string>
 </resources>
