--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="go_to_engineer_menu">Go to engineer menu</string>
     <string name="cancel">Cancel</string>
     <string name="edit_system_info_update">Edit \'System info\' update</string>
+    <string name="clear_system_info_update">Clear \'System info\' update</string>
 </resources>
